# card-game

./: CMakeLists.txt  README.md
include/: cardgame.h
src/: lib.cpp
test/: bestof.cpp  main.cpp
